Add parquet notes